plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.11'
    id 'io.spring.dependency-management' version '1.1.7'
}

java {
    group = 'com.devikapps'
    version = '1.0.0'
    sourceCompatibility = '21'
    targetCompatibility = '21'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-amqp'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.security:spring-security-crypto'
    implementation 'org.bouncycastle:bcprov-jdk18on:1.83'

    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.16'

    implementation 'org.owasp.encoder:encoder:1.4.0'
    implementation 'org.springframework.boot:spring-boot-starter-web'


    runtimeOnly 'org.postgresql:postgresql'

    implementation 'org.apache.commons:commons-lang3:3.20.0'
    implementation 'commons-io:commons-io:2.21.0'
    implementation 'org.apache.commons:commons-compress:1.28.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'

    testImplementation 'org.apache.commons:commons-compress:1.28.0'
    testImplementation 'org.springframework.amqp:spring-rabbit-test'
    testImplementation 'org.springframework.security:spring-security-test'

    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
    testImplementation 'org.testcontainers:rabbitmq'

    testImplementation 'org.wiremock:wiremock-standalone:3.13.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'com.icegreen:greenmail:2.1.8'
    testImplementation 'com.icegreen:greenmail-junit5:2.1.8'

}

tasks.named('test') {
    useJUnitPlatform()

    systemProperty "testcontainers.reuse.enable", "true"
    systemProperty "testcontainers.cleanup.enabled", "true"
    systemProperty "testcontainers.checks.disable", "true"


    jvmArgs(
            '-XX:+EnableDynamicAgentLoading',
            '-Djdk.instrument.traceUsage=false',
            '-Xshare:off'
    )

    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
        showStandardStreams = false
        showExceptions = true
        showCauses = true
        showStackTraces = true
    }
}
